crates/wac-parser/tests/resolution/fail/mismatched-flags-count.wac
import x: interface {
    flags f {
        a,
        b,
        c,
        d,
    }
};

let i = new foo:bar { x };
